<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lySession"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_170"
    android:layout_marginHorizontal="@dimen/dp_16"
    android:layout_marginTop="@dimen/dp_20"
    android:background="@drawable/item_bg_state"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProf"
            android:layout_width="@dimen/dp_44"
            android:layout_height="@dimen/dp_44"
            android:padding="@dimen/dp_4"
            android:src="@drawable/face_man_1"
            app:shapeAppearanceOverlay="@style/Circular"
            app:strokeColor="@color/persian_red"
            app:strokeWidth="@dimen/dp_2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                style="@style/Text.CafeNair.Medium.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tvJob"
                style="@style/Text.CafeNair.Regular.12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_6"
        android:background="@color/light_silver" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDate"
            style="@style/Text.DarkSilver.Regular.12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_date"
            android:drawablePadding="@dimen/dp_6"
            android:text="31st March ‘22" />

        <TextView
            android:id="@+id/tvTime"
            style="@style/Text.DarkSilver.Regular.12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:drawableStart="@drawable/ic_time"
            android:drawablePadding="@dimen/dp_6"
            android:text="@string/time" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="horizontal">

        <TextView
            style="@style/Text.Roboto.Bold.14"
            android:layout_width="@dimen/dp_118"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/orange_bg"
            android:gravity="center"
            android:text="Reschedule"
            android:textColor="@color/white" />


        <TextView
            style="@style/Text.Roboto.Bold.14"
            android:layout_width="@dimen/dp_118"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_16"
            android:gravity="center"
            android:text="Join Now"
            android:textColor="@color/orange" />

    </LinearLayout>

</LinearLayout>


