<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        style="@style/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imvCircularWithStroke"
            android:layout_width="@dimen/dp_44"
            android:layout_height="@dimen/dp_44"
            android:padding="@dimen/dp_4"
            android:src="@drawable/ic_the_rock"
            app:shapeAppearanceOverlay="@style/Circular"
            app:strokeColor="@color/persian_red"
            app:strokeWidth="@dimen/dp_4" />

<!--                <androidx.appcompat.widget.AppCompatImageView-->
<!--                    android:id="@+id/ivBadge"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="end"-->
<!--                    app:srcCompat="@drawable/ic_ring" />-->

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_ring" />

            <TextView
                android:id="@+id/tvBadgeCount"
                style="@style/Text.Roboto.Medium.12"
                android:layout_width="@dimen/dp_21"
                android:layout_height="@dimen/dp_21"
                android:layout_gravity="end|top"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:background="@drawable/badge_bg"
                android:gravity="center"
                android:text="5"
                android:textColor="@color/white" />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWelcome"
                style="@style/Text.DarkPurple.Medium.26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20"
                tools:text="Good Afternoon, Sarina!" />

            <TextView
                style="@style/Text.DarkPurple.Medium.16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_26"
                android:text="@string/howYouFeeling" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMood"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_84"
                android:layout_marginTop="@dimen/dp_16"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/mood_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_155"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/old_lace_bg"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Text.CafeNair.Black.22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1 on 1 Sessions" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="Let’s open up to the things that matter the most "
                        android:textColor="@color/cafe_noir"
                        android:textSize="@dimen/sp_12" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnBookNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/ic_outline_date_range"
                        android:drawablePadding="@dimen/dp_8"
                        android:fontFamily="@font/roboto_bold"
                        android:text="Book Now"
                        android:textAllCaps="false"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/sp_16" />

                </LinearLayout>

                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_meetup" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20">


                <TextView
                    style="@style/Text.Roboto.Bold.16"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="62dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="@dimen/sp_16"
                    android:layout_weight="1"
                    android:background="@drawable/gray_bg"
                    android:drawableStart="@drawable/ic_journal"
                    android:drawablePadding="@dimen/sp_16"
                    android:gravity="center|start"
                    android:padding="@dimen/dp_20"
                    android:text="@string/journal" />


                <TextView
                    style="@style/Text.Roboto.Bold.16"
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="62dp"
                    android:layout_gravity="center|end"
                    android:layout_weight="1"
                    android:background="@drawable/gray_bg"
                    android:drawableStart="@drawable/ic_round"
                    android:drawablePadding="@dimen/sp_16"
                    android:gravity="center|start"
                    android:padding="@dimen/dp_20"
                    android:text="@string/library" />

            </LinearLayout>


            <TextView
                style="@style/Text.Roboto.Regular.14"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_80"
                android:layout_gravity="center|end"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_weight="1"
                android:background="@drawable/gray_bg"
                android:drawableEnd="@drawable/ic_quote"
                android:drawablePadding="@dimen/dp_16"
                android:gravity="center|start"
                android:padding="@dimen/dp_20"
                android:text="@string/itIsBetter" />

            <!--            <LinearLayout-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="@dimen/dp_79"-->
            <!--                android:layout_marginHorizontal="@dimen/dp_16"-->
            <!--                android:layout_marginTop="@dimen/dp_16"-->
            <!--                android:background="@drawable/gray_bg">-->

            <!--                <TextView-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_gravity="center|start"-->
            <!--                    android:layout_margin="@dimen/dp_8"-->
            <!--                    android:layout_weight="1.7"-->
            <!--                    android:fontFamily="@font/roboto_regular"-->
            <!--                    android:text="@string/text2"-->
            <!--                    android:textSize="@dimen/dp_14" />-->

            <!--                <ImageView-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="24dp"-->
            <!--                    android:layout_gravity="center|end"-->
            <!--                    android:layout_marginHorizontal="@dimen/dp_16"-->
            <!--                    android:layout_weight="0.3"-->
            <!--                    android:src="@drawable/ic_quote" />-->

            <!--            </LinearLayout>-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_155"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:layout_marginVertical="@dimen/dp_20"
                android:background="@drawable/forest_green_bg">


                <LinearLayout
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="Plan Expired"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_22" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="Get back chat access and session credits"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_12" />


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnBuyMore"
                        style="@style/Text.Roboto.Bold.16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/ic_arrow_back"
                        android:drawablePadding="@dimen/dp_8"
                        android:text="Buy More"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />


                </LinearLayout>

                <ImageView
                    android:layout_width="85dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_meditation" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>